--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^6.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
